text behind image corrected

--- a/src/css/TestimonialCard.css
+++ b/src/css/TestimonialCard.css
@@ -33,7 +33,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 40%;
+    height: 40%;
     border-radius: 20px;
     border: 4px solid #ffa45c;
     transform: translate(-12%, -12%);
@@ -92,9 +92,10 @@
 }
 
 .testimonial-card-review {
+    position: absolute;
+    top: 33%;
     text-align: center;
     line-height: 1.3;
-    margin-top: 11%;
     padding: 3%;
     font-size: 13px;
     font-family: Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, sans-serif;
@@ -104,7 +105,7 @@
 .active .testimonial-card-review {
     text-align: center;
     line-height: 1.4;
-    margin-top: 9%;
+    top: 32%;
     padding: 5%;
     font-size: 16px;
 }
@@ -123,7 +124,7 @@
     }
 
     .testimonial-card-upper-parent img {
-        width: 37%;
+        height: 37%;
     }
 
     .testimonial-card-name {
@@ -162,14 +163,14 @@
 
     .testimonial-card-review {
         line-height: 1.2;
-        margin-top: 5%;
+        top: 32%;
         padding: 2%;
         font-size: 11px;
     }
 
     .active .testimonial-card-review {
         line-height: 1.2;
-        margin-top: 3%;
+        top: 31%;
         padding: 4%;
         font-size: 14px;
     }
@@ -203,17 +204,12 @@
 
     .active .testimonial-card-review {
         line-height: 1.4;
-        margin-top: 16%;
         padding: 4%;
         font-size: 22px;
     }
 }
 
 @media (max-width: 500px) {
-    .testimonial-card-upper-parent img {
-        transform: translate(-12%, -12%);
-    }
-
     .active .testimonial-card {
         padding: 4%;
     }
@@ -237,7 +233,6 @@
 
     .active .testimonial-card-review {
         line-height: 1.2;
-        margin-top: 7%;
         padding: 3%;
         font-size: 15px;
     }
@@ -263,7 +258,6 @@
 
     .active .testimonial-card-review {
         line-height: 1.1;
-        margin-top: 6%;
         padding: 2%;
         font-size: 13px;
     }
